# 2024li1g037

./: .gitignore  README.md  immutable-towers.cabal  release-template-README.txt  release-template-run-game.bat  release-template-run-game.ps1  run-game.bat  run-game.ps1
app/: BotSystem.hs  Desenhar.hs  EnemySystem.hs  Eventos.hs  GameFactory.hs  ImmutableTowers.hs  Main.hs  MapData.hs  MapEditor.hs  MenuComponents.hs  MetaTypes.hs  ProgressionSystem.hs  RenderConfig.hs  SaveSystem.hs  ScoreSystem.hs  Tempo.hs  TowerRuntime.hs  TowerSystem.hs  UIComponents.hs  UIRects.hs  UIState.hs  UIText.hs  WaveSystem.hs
docs/: HOME.md  backlog-jogo.md  changelog-jogavel.md  checklist-regressao.md  distribuicao.md  estado-atual.md  etapa5-roadmap-features.md  extras-implementados.md  feedback-jogo-lei120arch-2026-07-08.md  guia-vault.md  novas features.md  obsidian-index.md  prompt-mestre-continuidade.md  roadmap-atual.md  sistema-inimigos.md  sistema-ondas.md  sistema-progressao.md  sistema-torres.md  sistema-ui.md  template-playtest.md
docs/.obsidian/: workspace.json
lib/: EnemySpatial.hs  LI12425.hs  MapGeometry.hs  Tarefa1.hs  Tarefa2.hs  Tarefa3.hs
scripts/: package-windows-release.ps1  run-windows.sh
test/: EnemySystemSpec.hs  MapEditorSpec.hs  Spec.hs  Tarefa1Spec.hs  Tarefa2Spec.hs  Tarefa3Spec.hs  TowerSystemSpec.hs  UILayoutSpec.hs  WaveSystemSpec.hs
