cabal-version:      3.4

name:               immutable-towers
version:            0.0.0.0

license:            NONE

author:             Tomás Branco Dias <a107323@alunos.uminho.pt>
                    Ines Braga da Silva <a112819@alunos.uminho.pt>

category:           Game
build-type:         Simple

extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:
        EnemySpatial
        LI12425
        MapGeometry
        Tarefa1
        Tarefa2
        Tarefa3

    build-depends:
        base >=4.17 && <4.21,
        containers ^>=0.7,
        random ^>=1.3

    hs-source-dirs:   lib
    default-language: GHC2021

executable immutable-towers
    import:           warnings

    other-modules:
        BotSystem
        ImmutableTowers
        Desenhar
        Eventos
        GameFactory
        MapData
        MapEditor
        MenuComponents
        MetaTypes
        ProgressionSystem
        RenderConfig
        SaveSystem
        ScoreSystem
        Tempo
        TowerSystem
        UIComponents
        UIRects
        UIState
        UIText
        WaveSystem

    main-is:          Main.hs

    build-depends:
        base >=4.17 && <4.21,
        random ^>=1.3,
        gloss ^>=1.13.2.1,
        gloss-juicy ^>=0.2.3,
        immutable-towers

    hs-source-dirs:   app
    default-language: GHC2021

test-suite immutable-towers-test
    import:           warnings
    type:             exitcode-stdio-1.0

    other-modules:
        Tarefa1Spec
        Tarefa2Spec
        Tarefa3Spec

    main-is:          Spec.hs

    build-depends:
        base >=4.17 && <4.21,
        random ^>=1.3,
        HUnit ^>=1.6.2.0,
        gloss ^>=1.13.2.1,
        immutable-towers

    hs-source-dirs:   test
    default-language: GHC2021
